styles/landing.css
main {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.image-wrapper, .text-wrapper, .testimonials {
    width: 50%;
}

img.coffee {
    /* width: 300px;
    height: 300px;
    min-width: 150px;
    min-height: 150px;  */
    width: 20vw; 
    height: 20vw; 
    max-width: 300px; 
    max-height: 300px; 
    min-width: 150px; 
    min-height: 150px; 
    object-fit: cover;
    border-radius: 50%;
    border: 4px solid var(--col-l-grey);
    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
}

.text-wrapper {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

#brand {
    color: var(--col-brown);
}

.testimonials {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    padding: 1rem 2rem;
    background: var(--col-brown-alpha15);
    border-radius: 20px;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.review {
    flex: 1 1 30%;
    /* flex: 1; */
    border-right: 2px solid var(--col-brown-alpha15);
}

.review:last-child {
    border: none;
}

.rating {
    color: var(--col-khaki);
    -webkit-text-stroke: 1px var(--col-brown);
}

@media screen and (max-width: 1024px){
    .image-wrapper, .text-wrapper {
        width: 80%;
    }
}

@media screen and (max-width: 768px){
    .image-wrapper, .text-wrapper {
        width: 100%;
    }
    .item-wrapper {
        flex-direction: column;
    }
}

@media screen and (max-width: 509px){
    .image-wrapper, .text-wrapper {
        opacity: 1;
    }
}

@media screen and (max-width: 383px) {
    h2 {
        font-size: 22px;
    }
}

